feat(avatar, brand band) add helper classes for default group and profile images (#3356)
* update brand band to add classes for groups and profile pages.
* update avatar to add classes for the 3 different image sizes.

--- a/packages/design-system/design-tokens/image-paths.yml
+++ b/packages/design-system/design-tokens/image-paths.yml
@@ -10,14 +10,14 @@ props:
   BANNER_GROUP_DEFAULT_IMAGE:
     value: ''
   USER_DEFAULT_AVATAR:
-    value: ''
+    value: '/assets/images/profile_avatar_200.png'
   USER_DEFAULT_AVATAR_MEDIUM:
-    value: ''
+    value: '/assets/images/profile_avatar_160.png'
   USER_DEFAULT_AVATAR_SMALL:
-    value: ''
+    value: '/assets/images/profile_avatar_96.png'
   GROUP_DEFAULT_AVATAR:
-    value: ''
+    value: '/assets/images/group_avatar_200.png'
   GROUP_DEFAULT_AVATAR_MEDIUM:
-    value: ''
+    value: '/assets/images/group_avatar_160.png'
   GROUP_DEFAULT_AVATAR_SMALL:
-    value: ''
+    value: '/assets/images/group_avatar_96.png'
