chore(merge-summer-to-winter: merge branch 'summer-18' into winter-19 (#3367)

--- a/packages/design-system/.gitignore
+++ b/packages/design-system/.gitignore
@@ -16,6 +16,7 @@
 !/.sldsrc.defaults.yml
 !/.stylestatsrc
 !/.travis.yml
+!/.github
 
 # Add a .gitkeep file in an empty
 # directory to check it in the repository
