fix(global-header): change logo path (#3385)

--- a/packages/design-system/ui/components/global-header/tokens/background-color.yml
+++ b/packages/design-system/ui/components/global-header/tokens/background-color.yml
@@ -11,5 +11,5 @@ props:
     value: '{!PALETTE_GRAY_1}'
     comment: Global Header background color
   BRAND_LOGO_IMAGE:
-    value: '/assets/images/logo.svg'
+    value: '/assets/images/logo-noname.svg'
     type: string
