--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -131,6 +131,7 @@
     "raw-loader": "0.5.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-test-renderer": "16.4.1",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "strip-indent": "2.0.0",
