fix(path-arrow-refresh): Revise approach to drawing arrows (#3415)
* fix(path-arrow-refresh): revise approach to drawing arrows to better support contiguous, line paths and clean rendering.

* fix(path-arrow-refresh): Add back hover state to current step and make a few spacing refinements.

* fix(path-arrow-refresh): Lint space.

* fix(path-arrow-refresh): Remove unused token.

* fix(path-arrow-refresh): Missed token.

--- a/packages/design-system/ui/components/path/tokens/sizing.yml
+++ b/packages/design-system/ui/components/path/tokens/sizing.yml
@@ -17,7 +17,7 @@ global:
 props:
   HEIGHT_SALES_PATH:
     value: 2rem
-    comment: Height of Salespath
+    comment: Height of Path
   PATH_BUTTON_WIDTH_FIXED:
     value: 13rem
     comment: Width of action button to right
