--- a/packages/design-system/design-tokens/force-base/box-shadow.yml
+++ b/packages/design-system/design-tokens/force-base/box-shadow.yml
@@ -52,7 +52,10 @@ props:
     comment: Custom glow for focus states on UI elements with explicit containers.
   SHADOW_BUTTON_FOCUS_INVERSE:
     value: '{!OFFSET_NONE} {!OFFSET_NONE} {!OFFSET_SMALL}px {!PALETTE_COOL_GRAY_4}'
-    comment: Custom glow for focus states on UI elements with explicit containers on dark or vibrantly colored backgrounds.
+    comment: Custom glow for focus states on UI button elements with explicit containers on dark or vibrantly colored backgrounds.
+  SHADOW_LINK_FOCUS_INVERSE:
+    value: '{!OFFSET_NONE} {!OFFSET_NONE} {!OFFSET_SMALL}px {!PALETTE_COOL_GRAY_4}'
+    comment: Custom glow for focus states on UI link elements with explicit containers on dark or vibrantly colored backgrounds.
   SHADOW_INLINE_EDIT:
     value: '{!OFFSET_NONE} {!OFFSET_X_SMALL}px {!OFFSET_MEDIUM}px {!OFFSET_MEDIUM}px {!BLACK_TRANSPARENT_16}'
     comment: Shadow to make inline edit card pop out.
