--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,11 +1,11 @@
 {
   "name": "design-system",
   "description": "Salesforce Lightning Design System",
-  "version": "2.7.0-dev",
+  "version": "2.8.0-dev",
   "author": "Salesforce",
   "slds": {
-    "name": "Winter ’19",
-    "id": "216"
+    "name": "Spring ’19",
+    "id": "218"
   },
   "important": [
     "'private' and 'config.slds.internal' should have the same value",
@@ -19,7 +19,7 @@
     "search": {
       "appId": "B2KKG101RI",
       "apiKey": "f289c1dd954797a3e57158c04a897d46",
-      "indexName": "winter-19"
+      "indexName": "spring-19"
     }
   },
   "devDependencies": {
