--- a/packages/design-system/design-tokens/theme-one-salesforce.global.yml
+++ b/packages/design-system/design-tokens/theme-one-salesforce.global.yml
@@ -2,6 +2,4 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 imports:
-- ./deprecated/base.yml
-- ./global/base.yml
-- ./ui-force/base.yml
+- ./themes/oneSalesforce/global/base.yml
