--- a/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/background-color.yml
+++ b/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/background-color.yml
@@ -9,10 +9,9 @@ global:
   - 'border*'
   - box-shadow
   - text-shadow
-  theme: true
 imports:
-- ../../aliases/colors.yml
-- ../../aliases/color-palettes.yml
+- ../../../aliases/colors.yml
+- ../../../aliases/color-palettes.yml
 props:
   ## BACKGROUNDS
   COLOR_CONTRAST_PRIMARY:
