--- a/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/base.yml
+++ b/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/base.yml
@@ -2,13 +2,13 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 imports:
-- ./deprecated/base.yml
 - ./background-color.yml
 - ./border-color.yml
-- ./border-width.yml
+- ./border-radius.yml
 - ./box-shadow.yml
-- ./duration.yml
+- ./font-size.yml
+- ./font-weight.yml
 - ./image-paths.yml
-- ./sizing.yml
 - ./spacing.yml
+- ./text-align.yml
 - ./text-color.yml
