--- a/packages/design-system/design-tokens/form-factor/large/sizing.yml
+++ b/packages/design-system/design-tokens/form-factor/large/sizing.yml
@@ -19,12 +19,15 @@ props:
   WIDTH_STAGE_LEFT_COLLAPSED:
     value: 4rem
     comment: Stage left for desktop when closed (showing icons only).
+    access: global
   WIDTH_STAGE_LEFT_EXPANDED:
     value: 15rem
     comment: Stage left for desktop when open.
+    access: global
   HEIGHT_HEADER:
     value: 3.125rem
     comment: Header for desktop.
+    access: global
   SQUARE_ICON_MEDIUM:
     value: 2rem
     comment: Medium tap target size
