--- a/packages/design-system/design-tokens/global/font-weight.yml
+++ b/packages/design-system/design-tokens/global/font-weight.yml
@@ -13,9 +13,12 @@ props:
   FONT_WEIGHT_LIGHT:
     value: '{!FONT_WEIGHT_LIGHT}'
     comment: Use for large headings only.
+    access: global
   FONT_WEIGHT_REGULAR:
     value: '{!FONT_WEIGHT_REGULAR}'
     comment: Most all body copy.
+    access: global
   FONT_WEIGHT_BOLD:
     value: '{!FONT_WEIGHT_BOLD}'
     comment: Used sparingly for emphasized text within regular body copy.
+    access: global
