--- a/packages/design-system/design-tokens/global/line-height.yml
+++ b/packages/design-system/design-tokens/global/line-height.yml
@@ -11,16 +11,19 @@ props:
   LINE_HEIGHT_HEADING:
     value: '1.25'
     comment: Unitless line-heights for reusability
+    access: global
   LINE_HEIGHT_TEXT:
     value: '1.375'
     comment: Unitless line-heights for reusability
+    access: global
   LINE_HEIGHT_RESET:
     value: '1'
     comment: Remove extra leading. Unitless line-heights for reusability
+    access: global
   LINE_HEIGHT_TAB:
     value: 2.5rem
     comment: Line heights for tabs
-
+    access: global
   VAR_LINE_HEIGHT_TEXT:
     value: '1.375'
     comment: Variable unitless line-heights for reusability
