--- a/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/border-radius.yml
+++ b/packages/design-system/design-tokens/themes/oneSalesforce/ui-force/border-radius.yml
@@ -6,9 +6,8 @@ global:
   category: radius
   cssProperties:
   - 'border-radius'
-  theme: true
 imports:
-- ../../aliases/border-radius.yml
+- ../../../aliases/border-radius.yml
 props:
   ## PAGE HEADER
   PAGE_HEADER_BORDER_RADIUS:
