Revert "chore(aura-tokens): pull in scss-parser-aura pkg (#3515)" (#3528)
This reverts commit 1e8c9fb71d7d176a9b2ff60bd27508a62f49b9b1.

--- a/packages/design-system/.gitignore
+++ b/packages/design-system/.gitignore
@@ -37,6 +37,7 @@ design-tokens/components.yml
 
 # Ignore modules
 /node_modules
+/shared/vendor/scss-parser-aura/node_modules
 
 # Ignore assets
 /_slds/images/themes/oneSalesforce
