--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,7 +30,6 @@
     "@salesforce-ux/design-system-previewer": "3.2.0",
     "@salesforce-ux/icons": "9.18.0",
     "@salesforce-ux/instant-vrt": "2.0.0",
-    "@salesforce-ux/scss-parser-aura": "3.0.4",
     "@std/esm": "0.23.2",
     "async": "2.3.0",
     "autoprefixer": "6.7.7",
@@ -142,6 +141,7 @@
     "sass-loader": "6.0.6",
     "scss-inline-imports": "1.0.5",
     "scss-parser": "1.0.0",
+    "scss-parser-aura": "file:shared/vendor/scss-parser-aura",
     "strip-indent": "2.0.0",
     "style-loader": "0.19.0",
     "stylelint": "7.10.1",
