--- a/packages/design-system/design-tokens/themes/oneSalesforce/global/background-color.yml
+++ b/packages/design-system/design-tokens/themes/oneSalesforce/global/background-color.yml
@@ -46,3 +46,23 @@ props:
   COLOR_BACKGROUND_STENCIL_ALT:
     value: '{!PALETTE_GRAY_4}'
     comment: Used as an alternate background for loading stencils on gray backgrounds.
+  BRAND_BACKGROUND_PRIMARY:
+    value: "#b0c4df"
+    comment: "Primary page background color"
+    themeable: true
+    release: 2.6.0
+  BRAND_BACKGROUND_PRIMARY_TRANSPARENT:
+    value: "rgba(176,196,223,0)"
+    comment: "These RGBA values need to be updated if BRAND_BACKGROUND_PRIMARY changes, solves webkit bug"
+    themeable: true
+    release: 2.6.0
+  BRAND_BACKGROUND_DARK:
+    value: "#195594"
+    comment: "Dark variant of BRAND_BACKGROUND_PRIMARY, used within gradient of background color"
+    themeable: true
+    release: 2.6.0
+  BRAND_BACKGROUND_DARK_TRANSPARENT:
+    value: "rgba(25,85,148,0)"
+    comment: "These RGBA values need to be updated if BRAND_BACKGROUND_DARK changes, solves webkit bug"
+    themeable: true
+    release: 2.6.0
